--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend_ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/frontend",
   "dependencies": {
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.2.1",
