--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn delete-directory && yarn copy-build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "delete-directory": "rm -rf ../backendLumen/public/frontend/*",
+    "copy-build": "cp -r ./build/* ../backendLumen/public/frontend/"
   },
   "eslintConfig": {
     "extends": "react-app"
