--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_BASE_URL=""
-REACT_APP_URL=https://street17cafe.in
+REACT_APP_URL=http://localhost:8000
+#REACT_APP_URL=https://street17cafe.in
