--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-to-print": "^2.5.1",
-    "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
